samples/_failures_safe/1761408782_4e8135_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_445c735c.c: In function ‘parser_init’:
./samples/SAFE/__tmp_445c735c.c:167:29: error: ‘lexer_next’ undeclared (first use in this function); did you mean ‘lexer_init’?
  167 |     parser->current_token = lexer_next
      |                             ^~~~~~~~~~
      |                             lexer_init
./samples/SAFE/__tmp_445c735c.c:167:29: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_445c735c.c:167:39: error: expected ‘;’ at end of input
  167 |     parser->current_token = lexer_next
      |                                       ^
      |                                       ;
./samples/SAFE/__tmp_445c735c.c:167:5: error: expected declaration or statement at end of input
  167 |     parser->current_token = lexer_next
      |     ^~~~~~
